# crypto-vol-scanner

./: .gitignore  pyproject.toml
crypto_vol_scanner/: DownloadNomics.py  TestingSystem.py  UTCEntryExamination.docx  VolumeSpikeStrategySystem.py  backtrader-multi.ipynb  backtrader.ipynb  backtrader_daily_candles_generate_data.py  backtrader_guardian.py  backtrader_results_analysis.ipynb  backtrader_with_daily_data.ipynb  dummyStrat.py  multi_bt_generate_data.py  multi_bt_generate_data_focused.py  multi_nomics_bt_strategy.py  multi_nomics_bt_strategy_focused.py  nomics_bt_strategy.py  nomics_data_prep_for_backtrader.py  nomics_download_currency_candles.ipynb  nomics_sandbox.ipynb
downloaded_data/: Nomics-CurrencyHistory-ARV-USD-1d-2021-11-28T03_14_19.930Z.csv  Nomics-CurrencyHistory-AXS2-USD-1d-2021-11-28T03_14_30.356Z.csv  Nomics-CurrencyHistory-FTM-USD-1d-2021-11-28T04_19_32.350Z.csv  Nomics-CurrencyHistory-GRM3-USD-1d-2021-11-28T02_53_26.511Z.csv  Nomics-CurrencyHistory-GRO-USD-1d-2021-11-28T03_13_41.317Z (1).csv  Nomics-CurrencyHistory-LIGHT2-USD-1d-2021-11-28T02_53_06.999Z.csv  Nomics-CurrencyHistory-MATIC-USD-1d-2021-11-28T02_53_41.237Z (2).csv  Nomics-CurrencyHistory-RGT-USD-1d-2021-11-28T03_14_26.959Z.csv  Nomics-CurrencyHistory-SOL-USD-1d-2021-11-28T04_20_48.327Z.csv  Nomics-CurrencyHistory-THETA-USD-1d-2021-11-28T04_22_50.774Z.csv
downloaded_data/dad/: BINANCE DREP.csv  BINANCE FTM.csv  BINANCE LUNA.csv  BINANCE PHB.csv  BINANCE SOL.csv  BINANCE THETA.csv  BITKUB MANA.csv  BITTREX HYDRO.csv  EXMO DOGE.csv  FTX AXS.csv  FTX BAO.csv  FTX HNT.csv  FTX MATIC.csv  HITBTC ACD.csv  HITBTC EGLD.csv  HITBTC SYBC.csv  HITBTC VRA.csv  KUCOIN TEL.csv  POLONIEX SAND.csv
tests/: test_crypto_vol_scanner.py
