[tool.poetry]
name = "crypto-vol-scanner"
version = "0.1.0"
description = "Crypto bot to scan nomics looking for volume surging coins pre-pump."
authors = ["justinbarak <justinbarak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
nomics-python = "^3.2.0"
ipykernel = "^6.5.1"
jupyter = "^1.0.0"
python-dotenv = "^0.19.2"
backtrader = "^1.9.76"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
