[tool.poetry]
name = "crypto-vol-scanner"
version = "0.2.0"
description = "Crypto bot to scan nomics looking for volume surging coins pre-pump."
authors = ["justinbarak <justinbarak@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
matplotlib = "^3.5.0"
pandas = "^1.3.4"
nomics-python = "^3.2.0"
ipykernel = "^6.5.1"
jupyter = "^1.0.0"
python-dotenv = "^0.19.2"
# backtrader = {git = "https://github.com/mementum/backtrader.git", rev = "0fa63ef4a35dc53cc7320813f8b15480c8f85517"}
backtrader = "^1.9.76"
borb = "^2.0.15"
numpy = "^1.21.4"
tqdm = "^4.62.3"
openpyxl = "^3.0.9"
dill = "^0.3.4"
alive-progress = "1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
